<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java Tea</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_another">Another</string>
    <string name="init">0</string>
    <string name="quantity">Quantity</string>
    <string name="price">Order Summary</string>
    <string name="order">Order</string>
    <string name="email">Send</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toppings">Toppings</string>
    <string name="whip">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="thanks">Thank You!</string>
    <string name="title_activity_motion">MotionActivity</string>

    <!--
    Subject line for the order summary email. It will be in the format of "Just Java order for Amy"
    where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="email_subject_line">Just Java Tea order for <xliff:g example="Dollar" id="name">%s</xliff:g></string>

    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy"
    where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g example="Dollar" id="name">%s</xliff:g></string>

    <!--
    Whipped cream topping for the order summary.
    It will be shown in the format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <!--
    Chocolate topping for the order summary.
    It will be shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <!--
    Quantity of coffee cups for the order summary.
    It will be shown in the format of "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
    Total price for the order summary.
    It will be shown in the format of "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>

    <string name="order_summary_limit">You cannot have more than <xliff:g example="100" id="limit">%s</xliff:g> coffees</string>
</resources>
